chore: add dockerfile and docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,19 @@ services:
       - postgresql:/var/lib/postgresql
       - postgresql_data:/var/lib/postgresql/data
 
+  # app:
+  #   image: nextjs-app
+  #   build:
+  #     context: ./
+  #     target: dev
+  #     dockerfile: Dockerfile
+  #   volumes:
+  #     - .:/app
+  #     - /app/node_modules
+  #     - /app/.next
+  #   ports:
+  #     - "3000:3000"
+
 volumes:
   postgresql:
   postgresql_data:
