--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   db:
+    container_name: db
     image: postgres:latest
     ports:
       - "5432:5432"
@@ -9,19 +10,6 @@ services:
     volumes:
       - postgresql:/var/lib/postgresql
       - postgresql_data:/var/lib/postgresql/data
-
-  # app:
-  #   image: nextjs-app
-  #   build:
-  #     context: ./
-  #     target: dev
-  #     dockerfile: Dockerfile
-  #   volumes:
-  #     - .:/app
-  #     - /app/node_modules
-  #     - /app/.next
-  #   ports:
-  #     - "3000:3000"
 
 volumes:
   postgresql:
