--- a/package.json
+++ b/package.json
@@ -14,9 +14,15 @@
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
     "@prisma/client": "^5.21.1",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "@types/pg": "^8.11.10",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -24,9 +30,11 @@
     "dotenv": "^16.4.5",
     "lucide-react": "^0.454.0",
     "next": "14.2.15",
+    "next-themes": "^0.4.3",
     "pg": "^8.13.1",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
