chore: update .env

--- a/.env.production
+++ b/.env.production
@@ -16,4 +16,4 @@ PG_DATABASE="ciberseguridad"
 PG_PASSWORD="7IXBfzmv6xcE"
 PG_PORT="5432"
 
-HOST_URL="https://rodrigo-lab.site"
+HOST_URL="http://52.200.186.177:3000"
